# Anomaly-Detector-Server

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetection.cpp  SimpleAnomalyDetection.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  TimeSeries.cpp  TimeSeries.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  main.cpp  minCircle.cpp  minCircle.h  test_time_series.csv  timeseries.cpp  timeseries.h
